05_squares/grade.txt
Grading at Sun Sep 13 05:39:13 UTC 2020
Trying to compile your code and link with squares_test.o
squares.c: In function ‘squares’:
squares.c:57:48: error: expected expression before ‘||’ token
      if ((x<size1 && y ==0) || (y ==(size1-1)))||(y< size1 && (x==0 ||x=(size1-1))))
                                                ^
squares.c:57:84: error: expected statement before ‘)’ token
      if ((x<size1 && y ==0) || (y ==(size1-1)))||(y< size1 && (x==0 ||x=(size1-1))))
                                                                                    ^
squares.c:61:6: error: ‘else’ without a previous ‘if’
      else
      ^
Could not compile your code

Overall Grade: FAILED
